@@ -134,6 +134,7 @@ class LuaUnsyncedRead {
 		static int GetMouseCursor(lua_State* L);
 		static int GetMouseStartPosition(lua_State* L);
 
+		static int GetKeyFromScanSymbol(lua_State* L);
 		static int GetKeyState(lua_State* L);
 		static int GetModKeyState(lua_State* L);
 		static int GetPressedKeys(lua_State* L);
